--- a/android-datastore/app/build.gradle
+++ b/android-datastore/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test:runner:$runnerVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
+
+    //Datastore preferences
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha02"
 }
